--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.0.
+
+2007-05-08  Guillem Jover  <guillem@debian.org>
+
 	* scripts/controllib.pl (read_cputable): Localize $_.
 	(read_ostable): Likewise.
 	(read_triplettable): Likewise.
