--- a/TODO
+++ b/TODO
@@ -9,8 +9,10 @@ lenny
  * Triage as much bugs as possible to get the bug count below 300 ;) and
    merge as much patches as possible.
 
-1.14.0
+1.14.1
 ------
+
+ * Make dpkg bootstrappable (modularize dpkg-architecture).
 
  * Support udeb natively:
    - Add field Package-Type and friends.
