--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -7,8 +7,9 @@
 
 	* pl.po: Updated to 285t.
 
-2007-03-28 Bart Cornelis <cobaco@skolelinux.no>
-	* nl.po: Updated translation
+2007-03-28  Bart Cornelis  <cobaco@skolelinux.no>
+
+	* nl.po: Updated translation.
 
 2007-03-21  Guillem Jover  <guillem@debian.org>
 
