--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -7,29 +7,29 @@
 
 	* LINGUAS: Estonian is 'et' not 'es'.
 
-2007-05-04  Ivar Smolin
+2007-05-04  Ivar Smolin  <okul@linux.ee>
 
-	* et.po: Added with 304t8f608u
+	* et.po: Added with 304t8f608u.
 
-2007-05-04  Robert Luberda
+2007-05-04  Robert Luberda  <robert@debian.org>
 
-	* pl.po: Updated to 920t
+	* pl.po: Updated to 920t.
 
 2007-05-04  Frédéric Bothamy  <frederic.bothamy@free.fr>
 
-	* fr.po: Updated to 920t
+	* fr.po: Updated to 920t.
 
 2007-04-07  Erdal Ronahi  <erdal.ronahi@gmail.com>
-	
-	* ku.po: Added translation. Closes: #418154
+
+	* ku.po: Added translation.
 
 2007-04-01  Priti Patil  <prithisd@gmail.com>
-	
-	* mr.po: Added translation. Closes: #416810
+
+	* mr.po: Added translation.
 
 2007-03-28  Bart Cornelis  <cobaco@skolelinux.no>
-	
-	* nl.po: Updated translation
+
+	* nl.po: Updated translation.
 
 2007-03-21  Guillem Jover  <guillem@debian.org>
 
@@ -37,17 +37,17 @@
 	* *.po: Merged with dpkg.pot. Formerly completed translations
 	become 907t11f2u.
 
-2007-03-18  Robert Luberda
+2007-03-18  Robert Luberda  <robert@debian.org>
 
-	* pl.po: Updated to 920t
+	* pl.po: Updated to 920t.
 
 2007-03-18  Anthony Wong  <me@ypwong.org>
 
-	* zh_CN.po: Updated to 918t2f
+	* zh_CN.po: Updated to 918t2f.
 
 2007-03-17  Anthony Wong  <me@ypwong.org>
 
-	* zh_TW.po: Update for one string. Closes: #415230
+	* zh_TW.po: Update for one string.
 
 2007-01-11  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
@@ -64,7 +64,7 @@
 
 2006-12-25  A S Alam  <apbrar@gmail.com>
 
-	* pa.po: New Punjabi translation (201t up to now)
+	* pa.po: New Punjabi translation (201t up to now).
 
 2006-12-22  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
@@ -73,7 +73,7 @@
 
 2006-11-06  Clytie Siddall  <clytie@riverland.net.au>
 
-	* vi.po: Various fixes
+	* vi.po: Various fixes.
 
 2006-11-17  Guillem Jover  <guillem@debian.org>
 
