--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.1~) UNRELEASED; urgency=low
+
+  * 
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 08 May 2007 11:51:03 +0300
+
 dpkg (1.14.0) unstable; urgency=low
 
   [ Guillem Jover ]
