--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 dpkg (1.14.1~) UNRELEASED; urgency=low
 
-  * 
+  [ Guillem Jover ]
+  * Fix partial upgrades by tightening dpkg-dev versioned Depends to
+    dpkg 1.14.0, and dpkg Conflicts against << dpkg-dev 1.14.0, where
+    the triplettable support first appeared. Closes: #422848
 
  -- Guillem Jover <guillem@debian.org>  Tue, 08 May 2007 11:51:03 +0300
 
