--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-dpkg (1.14.1~) UNRELEASED; urgency=low
+dpkg (1.14.1) unstable; urgency=low
 
   [ Guillem Jover ]
   * Fix partial upgrades by tightening dpkg-dev versioned Depends to
     dpkg 1.14.0, and dpkg Conflicts against << dpkg-dev 1.14.0, where
     the triplettable support first appeared. Closes: #422848
 
- -- Guillem Jover <guillem@debian.org>  Tue, 08 May 2007 11:51:03 +0300
+ -- Guillem Jover <guillem@debian.org>  Tue, 08 May 2007 18:23:49 +0300
 
 dpkg (1.14.0) unstable; urgency=low
 
