Remove bashisms in dpkg-buildpackage. Closes: #422239

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-09  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-buildpackage.sh: Remove check for variable being empty,
+	as the path check quoted, thus removing the bashisms.
+
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.2~.
