--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 dpkg (1.14.2) UNRELEASED; urgency=low
 
-  * 
+  * Remove bashisms in dpkg-buildpackage. Closes: #422239
 
  -- Guillem Jover <guillem@debian.org>  Tue, 08 May 2007 18:48:22 +0300
 
