Add solaris support to ostable and triplettable. Closes: #361866

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.14.2) UNRELEASED; urgency=low
   * Remove bashisms in dpkg-buildpackage. Closes: #422239
   * Handle case in update-alternatives when there's no existing alternative
     to configure. Closes: #260987, #353252, #367717, #392431
+  * Add solaris support to ostable and triplettable. Closes: #361866
 
  -- Guillem Jover <guillem@debian.org>  Tue, 08 May 2007 18:48:22 +0300
 
