--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.14.2) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
   * Remove bashisms in dpkg-buildpackage. Closes: #422239
   * Handle case in update-alternatives when there's no existing alternative
     to configure. Closes: #260987, #353252, #367717, #392431
