Include translations again, which disappeared due to a dirty source tree. Closes: #423029, #423085

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dpkg (1.14.2) UNRELEASED; urgency=low
   * Add solaris support to ostable and triplettable. Closes: #361866
   * Properly create the generic name symlink in update-alternatives for new
     alternatives. Closes: #422979
+  * Include translations again, which disappeared due to a dirty source tree.
+    Closes: #423029, #423085
 
  -- Guillem Jover <guillem@debian.org>  Tue, 08 May 2007 18:48:22 +0300
 
