* Makefile.am (EXTRA_DIST): Add 'debian/dpkg-dev.lintian-overrides', 	'debian/dpkg.lintian-overrides', 'debian/dselect.lintian-overrides' 	and 'debian/source.lintian-overrides'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-05-09  Guillem Jover  <guillem@debian.org>
 
+	* Makefile.am (EXTRA_DIST): Add 'debian/dpkg-dev.lintian-overrides',
+	'debian/dpkg.lintian-overrides', 'debian/dselect.lintian-overrides'
+	and 'debian/source.lintian-overrides'.
+
+2007-05-09  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl: Create the generic name symlinks
 	when there's none, or when it differs to the current one.
 
