* man/Makefile.am (install-data-local): Install the translated man 	pages from the srcdir.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-05-09  Guillem Jover  <guillem@debian.org>
 
+	* man/Makefile.am (install-data-local): Install the translated man
+	pages from the srcdir.
+
+2007-05-09  Guillem Jover  <guillem@debian.org>
+
 	* Makefile.am (EXTRA_DIST): Add 'debian/dpkg-dev.lintian-overrides',
 	'debian/dpkg.lintian-overrides', 'debian/dselect.lintian-overrides'
 	and 'debian/source.lintian-overrides'.
