--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-05-09  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.2.
+
+2007-05-09  Guillem Jover  <guillem@debian.org>
+
 	* man/Makefile.am (install-data-local): Install the translated man
 	pages from the srcdir.
 
