--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.2) UNRELEASED; urgency=low
+dpkg (1.14.2) unstable; urgency=low
 
   [ Guillem Jover ]
   * Remove bashisms in dpkg-buildpackage. Closes: #422239
@@ -10,7 +10,7 @@ dpkg (1.14.2) UNRELEASED; urgency=low
   * Include translations again, which disappeared due to a dirty source tree
     and a bogus Makefile.am for the man pages. Closes: #423029, #423085
 
- -- Guillem Jover <guillem@debian.org>  Tue, 08 May 2007 18:48:22 +0300
+ -- Guillem Jover <guillem@debian.org>  Wed, 09 May 2007 22:22:45 +0300
 
 dpkg (1.14.1) unstable; urgency=low
 
