Updated Dutch translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-10  Bart Cornelis <cobaco@skolelinux.no>
+
+	* nl.po: Updated translation
+
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
