--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.3) UNRELEASED; urgency=low
 
-  * 
+  [ Guillem Jover ]
+  * Fix perl warnings in dpkg-genchanges when called with -S. Closes: #423193
 
  -- Guillem Jover <guillem@debian.org>  Wed, 09 May 2007 22:40:16 +0300
 
