Corrected typo in French translation of scripts

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,10 @@ dpkg (1.14.3) UNRELEASED; urgency=low
   * Fix perl warnings in dpkg-genchanges when called with -S. Closes: #423193
   * Refactor update-alternatives.
 
- -- Guillem Jover <guillem@debian.org>  Wed, 09 May 2007 22:40:16 +0300
+  [ Updated scripts translations ]
+  * Typoe corrected in French translation. Closes: #423392
+
+ -- Christian Perrier <bubulle@debian.org>  Fri, 11 May 2007 19:23:38 +0200
 
 dpkg (1.14.2) unstable; urgency=low
 
