--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-08  Frédéric Bothamy  <frederic.bothamy@free.fr>
+
+	* fr.po: Typo corrected (s/-O/-0)
+
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
