Updated German translations Unfuzzy French translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,9 +5,17 @@ dpkg (1.14.3) UNRELEASED; urgency=low
   * Refactor update-alternatives.
 
   [ Updated scripts translations ]
-  * Typoe corrected in French translation. Closes: #423392
+  * Typo corrected in French translation. Closes: #423392
 
- -- Christian Perrier <bubulle@debian.org>  Fri, 11 May 2007 19:23:38 +0200
+  [ Updated programs translations ]
+  * German. Closes: #423401
+  * French
+  * Dutch
+
+  [ Updated dselect translations ]
+  * German. Closes: #423403
+
+ -- Christian Perrier <bubulle@debian.org>  Fri, 11 May 2007 19:29:27 +0200
 
 dpkg (1.14.2) unstable; urgency=low
 
