--- a/po/fr.po
+++ b/po/fr.po
@@ -5714,12 +5714,12 @@ msgid "Removing %s (%s), not appropriate with %s."
 msgstr "Suppression de %s (%s), non approprié avec %s."
 
 #: scripts/update-alternatives.pl:621
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "There is no program which provides %s.\n"
 "Nothing to configure.\n"
 msgstr ""
-"Il n'y a qu'un programme fournissant %s (%s).\n"
+"Il n'y a aucun programme fournissant %s.\n"
 "Rien à configurer.\n"
 
 #: scripts/update-alternatives.pl:627
