--- a/dselect/po/de.po
+++ b/dselect/po/de.po
@@ -4,16 +4,16 @@
 # Erich Schubert <debian@vitavonni.de>, March 2001.
 # Michael Piefel <piefel@debian.org>, 2001, 2002, 2003, 2004, 2005.
 # Florian Ernst <florian@uni-hd.de>, 2004.
-# Sven Joachim <svenjoac@gmx.de>, 2006.
+# Sven Joachim <svenjoac@gmx.de>, 2006, 2007.
 #
 # $Id$
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.13.22\n"
+"Project-Id-Version: Debian dpkg 1.14.2\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-08 04:15+0300\n"
-"PO-Revision-Date: 2006-08-22 20:29+0200\n"
+"PO-Revision-Date: 2007-05-11 15:00+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -144,7 +144,6 @@ msgstr ""
 "\n"
 
 #: dselect/baselist.cc:259
-#, fuzzy
 msgid "Keybindings"
 msgstr "Tastenzuordnungen"
 
@@ -310,7 +309,6 @@ msgid "Keystrokes"
 msgstr "Tastenkürzel"
 
 #: dselect/helpmsgs.cc:25
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -343,7 +341,7 @@ msgid ""
 msgstr ""
 "Bewegungstasten: Nächstes/Vorheriges, Anfang/Ende, Hoch/Runter, Rück-/"
 "Vorwärts:\n"
-"  Pfeil ab, j         Pfeil hoch, k           Hervorhebung bewegen\n"
+"  j, Pfeil ab         k, Pfeil hoch           Hervorhebung bewegen\n"
 "  N, Bild ab, Leert.  P, Bild hoch, Rückschr. Liste um 1 Seite scrollen\n"
 "  ^n                  ^p                      Liste um 1 Zeile scrollen\n"
 "  t, Pos1             e, Ende                 springe zu Anfang/Ende der "
@@ -723,10 +721,7 @@ msgstr ""
 msgid "Keystrokes for method selection"
 msgstr "Tastenkürzel für die Methoden-Auswahl"
 
-# Fehler in der 2. Zeile im englischen Text (j und k statt n und p
-# ist richtig), siehe http://bugs.debian.org/383438.
 #: dselect/helpmsgs.cc:191
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -752,7 +747,7 @@ msgid ""
 msgstr ""
 "Bewegungstasten: Nächstes/Vorheriges, Anfang/Ende, Hoch/Runter, Rück-/"
 "Vorwärts:\n"
-"  Pfeil ab, j         Pfeil hoch, k           Hervorhebung bewegen\n"
+"  j, Pfeil ab         k, Pfeil hoch           Hervorhebung bewegen\n"
 "  N, Bild ab, Leert.  P, Bild hoch, Rückschr. Liste um 1 Seite scrollen\n"
 "  ^n                  ^p                      Liste um 1 Zeile scrollen\n"
 "  t, Pos1             e, Ende                 springe zu Anfang/Ende der "
@@ -1082,9 +1077,8 @@ msgid "[none]"
 msgstr "[keine]"
 
 #: dselect/methlist.cc:191
-#, fuzzy
 msgid "Explanation"
-msgstr "Beschreibung von "
+msgstr "Beschreibung"
 
 #: dselect/methlist.cc:200
 msgid "No explanation available."
@@ -1431,9 +1425,10 @@ msgstr "hängt ab von"
 msgid "pre-depends on"
 msgstr "hängt ab (vorher) von"
 
+# CHECKME: breaks ist keine symmetrische Beziehung
 #: dselect/pkgdisplay.cc:75
 msgid "breaks with"
-msgstr ""
+msgstr "deaktiviert"
 
 #: dselect/pkgdisplay.cc:76
 msgid "conflicts with"
@@ -1651,24 +1646,20 @@ msgstr ""
 "damit die Pakete in anderen Gruppen zu markieren."
 
 #: dselect/pkginfo.cc:95
-#, fuzzy
 msgid "Interrelationships"
-msgstr "gegenseitige Beziehungen"
+msgstr "Gegenseitige Beziehungen"
 
 #: dselect/pkginfo.cc:112
-#, fuzzy
 msgid "No description available."
-msgstr "keine Beschreibung verfügbar."
+msgstr "Keine Beschreibung verfügbar."
 
 #: dselect/pkginfo.cc:130
-#, fuzzy
 msgid "Installed control file information"
-msgstr "Installierte Control-Info für "
+msgstr "Installierte Control-Datei-Informationen"
 
 #: dselect/pkginfo.cc:146
-#, fuzzy
 msgid "Available control file information"
-msgstr "verfügbare Version der Control-Datei-Info"
+msgstr "Verfügbare Control-Datei-Informationen"
 
 # Debug-Ausgabe: Warum ist das überhaupt übersetzbar?
 #: dselect/pkglist.cc:123 dselect/pkglist.cc:124
@@ -1773,18 +1764,3 @@ msgstr "Inst.Ver"
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Verf.Ver"
-
-#~ msgid "interrelationships affecting "
-#~ msgstr "gegenseitige Beziehungen betreffend "
-
-#~ msgid "description of "
-#~ msgstr "Beschreibung von "
-
-#~ msgid "description"
-#~ msgstr "Beschreibung"
-
-#~ msgid "currently installed control info"
-#~ msgstr "Derzeit installierte Control-Info"
-
-#~ msgid "available version of control info for "
-#~ msgstr "verfügbare Version der Control-Info für "
