--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,11 @@
+2007-05-11  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 921t
+
+2007-05-11  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Updated to 921t
+
 2007-05-10  Bart Cornelis <cobaco@skolelinux.no>
 
 	* nl.po: Updated translation
