--- a/po/de.po
+++ b/po/de.po
@@ -4,16 +4,16 @@
 # Erich Schubert <debian@vitavonni.de>, March 2001.
 # Michael Piefel <piefel@debian.org>, 2001, 2002, 2003, 2004, 2005.
 # Florian Ernst <florian@uni-hd.de>, 2004.
-# Sven Joachim <svenjoac@gmx.de>, 2006.
+# Sven Joachim <svenjoac@gmx.de>, 2006, 2007.
 #
 # $Id$
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.13.23\n"
+"Project-Id-Version: Debian dpkg 1.14.2\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-09 21:06+0300\n"
-"PO-Revision-Date: 2006-10-07 15:46+0200\n"
+"PO-Revision-Date: 2007-05-11 14:52+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -63,9 +63,9 @@ msgid "Signal no.%d"
 msgstr "Signal Nr. %d"
 
 #: lib/compression.c:34
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec '%s %s'"
-msgstr "%s: Konnte »gzip %s« nicht ausführen"
+msgstr "%s: Konnte »%s %s« nicht ausführen"
 
 #: lib/compression.c:62
 #, c-format
@@ -1124,7 +1124,7 @@ msgstr ""
 #: src/archives.c:903
 #, c-format
 msgid "package %s has too many Conflicts/Replaces pairs"
-msgstr ""
+msgstr "Paket %s hat zu viele Conflicts/Replaces-Paare"
 
 #: src/archives.c:909
 #, c-format
@@ -1586,39 +1586,39 @@ msgid "unable to check for existence of `%.250s'"
 msgstr "Kann Existenz von »%.250s« nicht prüfen"
 
 #: src/depcon.c:156
-#, fuzzy, c-format
+#, c-format
 msgid "%s depends on %s"
-msgstr " hängt ab von "
+msgstr "%s hängt von %s ab"
 
 #: src/depcon.c:159
-#, fuzzy, c-format
+#, c-format
 msgid "%s pre-depends on %s"
-msgstr " hängt ab (vorher) von "
+msgstr "%s hängt (vorher) von %s ab"
 
 #: src/depcon.c:162
-#, fuzzy, c-format
+#, c-format
 msgid "%s recommends %s"
-msgstr " empfiehlt "
+msgstr "%s empfiehlt %s"
 
 #: src/depcon.c:165
-#, fuzzy, c-format
+#, c-format
 msgid "%s suggests %s"
-msgstr " befürwortet "
+msgstr "%s schlägt %s vor"
 
 #: src/depcon.c:168
-#, fuzzy, c-format
+#, c-format
 msgid "%s breaks %s"
-msgstr " deaktiviert "
+msgstr "%s deaktiviert %s"
 
 #: src/depcon.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s conflicts with %s"
-msgstr " kollidiert mit "
+msgstr "%s kollidiert mit %s"
 
 #: src/depcon.c:174
-#, fuzzy, c-format
+#, c-format
 msgid "%s enhances %s"
-msgstr " erweitert "
+msgstr "%s erweitert %s"
 
 #: src/depcon.c:269
 #, c-format
@@ -2879,13 +2879,13 @@ msgid "unable to stat other new file `%.250s'"
 msgstr "Kann kein stat auf andere neue Datei »%.250s« durchführen"
 
 #: src/processarc.c:674
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
 "%.250s' and `%.250s')\n"
 msgstr ""
 "dpkg: Warnung - alte Datei »%.250s« ist die gleiche wie mehrere neue "
-"Dateien! (sowohl »%.250s« als auch »%.250s«)"
+"Dateien! (sowohl »%.250s« als auch »%.250s«)\n"
 
 #: src/processarc.c:715
 #, c-format
@@ -3360,7 +3360,7 @@ msgstr "dpkg-deb - Fehler: %s (»%s«) enthält keine Ziffern\n"
 #: dpkg-deb/build.c:111
 #, c-format
 msgid "file name '%.50s...' is too long"
-msgstr ""
+msgstr "Dateiname »%.50s...« ist zu lang"
 
 #: dpkg-deb/build.c:172
 msgid "--build needs a directory argument"
@@ -3933,7 +3933,7 @@ msgstr ""
 "\n"
 
 #: dpkg-deb/main.c:85
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --showformat=<format>            Use alternative format for --show.\n"
@@ -3958,7 +3958,8 @@ msgstr ""
 "  -z#                              Die Komprimierungsstärke beim Bauen "
 "setzen.\n"
 "  -Z<type>                         Den Komprimierungstyp beim Bauen setzen.\n"
-"                                     Erlaubte Werte: gzip, bzip2, none.\n"
+"                                     Erlaubte Werte: gzip, bzip2, lzma, "
+"none.\n"
 "\n"
 
 #: dpkg-deb/main.c:106
@@ -5121,7 +5122,7 @@ msgstr ""
 "Copyright (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:78
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5180,7 +5181,7 @@ msgstr ""
 "  --set <Name> <Pfad>      <Pfad> als Alternative für <Name> setzen.\n"
 "  --all                    --config auf allen Alternativen ausführen.\n"
 "\n"
-"<Link> ist der symbolische Link, der auf /etc/alternatives/<Name> verweist.\n"
+"<Link> ist der symbolische Link, der auf %s/<Name> verweist.\n"
 "  (z.B. /usr/bin/pager)\n"
 "<Name> ist der Name des Masters für diese Link-Gruppe.\n"
 "  (z.B. pager)\n"
@@ -5491,13 +5492,13 @@ msgid "Removing %s (%s), not appropriate with %s."
 msgstr "Entferne %s (%s), nicht angebracht mit %s."
 
 #: scripts/update-alternatives.pl:621
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "There is no program which provides %s.\n"
 "Nothing to configure.\n"
 msgstr ""
-"Es gibt nur 1 Programm, welches %s bereitstellt\n"
-"(%s). Nichts zu konfigurieren.\n"
+"Es gibt kein Programm, welches %s bereitstellt.\n"
+"Nichts zu konfigurieren.\n"
 
 #: scripts/update-alternatives.pl:627
 #, perl-format
@@ -5561,12 +5562,3 @@ msgstr "fehlender Zeilenvorschub nach %s"
 #, perl-format
 msgid "Serious problem: %s"
 msgstr "Schwerwiegendes Problem: %s"
-
-#~ msgid "%s: failed to exec gzip -dc"
-#~ msgstr "%s: Konnte »gzip -dc« nicht ausführen"
-
-#~ msgid "%s: failed to exec bzip2 -dc"
-#~ msgstr "%s: Konnte »bzip2 -dc« nicht ausführen"
-
-#~ msgid "%s: failed to exec bzip2 %s"
-#~ msgstr "%s: Konnte »bzip2 %s« nicht ausführen"
