Fix deb-substvars.5 section to match reality.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dpkg (1.14.3) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Fix perl warnings in dpkg-genchanges when called with -S. Closes: #423193
+  * Fix deb-substvars.5 section to match reality.
   * Refactor update-alternatives.
 
   [ Updated scripts translations ]
