--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-12  Guillem Jover  <guillem@debian.org>
+
+	* deb-substvars.5: Fix title to match the real section.
+
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
 	* Makefile.am (dist-hook): New target.
