--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ dpkg (1.14.3) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Fix perl warnings in dpkg-genchanges when called with -S. Closes: #423193
+  * Include the new split man pages deb-substvars.5, deb-override.5 and
+    deb-shlibs.5 in dpkg-dev.
   * Fix deb-substvars.5 section to match reality.
   * Refactor update-alternatives.
 
