--- a/debian/changelog
+++ b/debian/changelog
@@ -9,16 +9,15 @@ dpkg (1.14.3) UNRELEASED; urgency=low
   * Fix deb-substvars.5 section to match reality.
   * Refactor update-alternatives.
 
-  [ Updated scripts translations ]
-  * Typo corrected in French translation. Closes: #423392
+  [ Updated dpkg-dev translations ]
+  * French (Frédéric Bothamy). Closes: #423392
 
-  [ Updated programs translations ]
-  * German. Closes: #423401
-  * French
-  * Dutch
+  [ Updated dpkg translations ]
+  * French (Christian Perrier).
+  * German (Sven Joachim). Closes: #423401
 
   [ Updated dselect translations ]
-  * German. Closes: #423403
+  * German (Sven Joachim). Closes: #423403
 
  -- Christian Perrier <bubulle@debian.org>  Fri, 11 May 2007 19:29:27 +0200
 
@@ -119,14 +118,16 @@ dpkg (1.14.0) unstable; urgency=low
 
   [ Updated dpkg translations ]
   * Dutch (Bart Cornelis).
-  * Estonian added (Ivar Smolin). Closes: #422404
   * French (Frédéric Bothamy).
-  * Kurdish added (Erdal Ronahi). Closes: #418154
-  * Marathi added (Priti Patil). Closes: #416810
   * Polish (Robert Luberda).
   * Romanian (Eddy Petri?or).
   * Simplified Chinese (Anthony Wong). Closes: #415320
   * Traditional Chinese (Anthony Wong). Closes: #415230
+
+  [ Added dpkg translations ]
+  * Estonian added (Ivar Smolin). Closes: #422404
+  * Kurdish added (Erdal Ronahi). Closes: #418154
+  * Marathi added (Priti Patil). Closes: #416810
 
   [ Updated man pages translations ]
   * German (German l10n team). Closes: #418528
@@ -164,7 +165,9 @@ dpkg (1.13.25) unstable; urgency=low
   * Catalan (Jordà Polo).
   * Swedish (Peter Karlsson).
   * Vietnamese (Clytie Siddall). Closes: #399343
-  * Punjabi added (A S Alam).
+
+  [ Added dpkg translations ]
+  * Punjabi (A S Alam).
 
   [ Updated dpkg-dev translations ]
   * Catalan (Jordi Mallach).
