--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,6 +1,6 @@
 2007-05-11  Frédéric Bothamy  <frederic.bothamy@free.fr>
 
-	* fr.po: Typo corrected (s/-O/-0)
+	* fr.po: Typo corrected (s/-O/-0).
 
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
