Fix dpkg-divert to work again w/o specifying the --divert and --package options. Closes: #423864

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ dpkg (1.14.3) UNRELEASED; urgency=low
     deb-shlibs.5 in dpkg-dev.
   * Fix deb-substvars.5 section to match reality.
   * Refactor update-alternatives.
+  * Fix dpkg-divert to work again w/o specifying the --divert and --package
+    options. Closes: #423864
 
   [ Updated dpkg-dev translations ]
   * French (Frédéric Bothamy). Closes: #423392
