--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-14  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-divert.pl ($divertto, $package): Initialize to undef
+	instead of an empty string.
+
 2007-05-13  Guillem Jover  <guillem@debian.org>
 
 	* scripts/controllib.pl (debarch_eq): Return 0 if
