Fill slavepaths undefined entries with an empty string to guarantee they are always defined. Closes: #423140, #423451, #423544, #423555

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-05-15  Guillem Jover  <guillem@debian.org>
+
+	* scripts/update-alternatives.pl: Call fill_missing_slavepaths at the
+	end of the 'install' conditional.
+	(fill_missing_slavepaths): New function.
+
 2007-05-14  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-divert.pl ($divertto, $package): Initialize to undef
