--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.14.3) UNRELEASED; urgency=low
   * Fix perl warnings:
     - In dpkg-genchanges when called with -S. Closes: #423193
     - In architecture comparison operations. Closes: #423452
+    - Fill slavepaths undefined entries with an empty string to guarantee
+      they are always defined. Closes: #423140, #423451, #423544, #423555
   * Include the new split man pages deb-substvars.5, deb-override.5 and
     deb-shlibs.5 in dpkg-dev.
   * Fix deb-substvars.5 section to match reality.
