Disambiguate in install-info.8 the use of 'Info directory' with 'Info dir file'. Closes: #420766

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-15  Guillem Jover  <guillem@debian.org>
+
+	* install-info.8: Disambiguate the use of 'Info directory' with 'Info
+	dir file'.
+
 2007-05-15  Kurt B. Kaiser  <kbk@shore.net>
 
 	* install-info.8: Add missing commas, and information on the behaviour
