--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ dpkg (1.14.3) UNRELEASED; urgency=low
   * Document in install-info.8 that when no '--section' option is specified,
     install-info will try to use the INFO-DIR-SECTION entry from the info
     file. Add missing commas. Thanks to Kurt B. Kaiser. Closes: #397737
+  * Disambiguate in install-info.8 the use of 'Info directory' with
+    'Info dir file'. Closes: #420766
 
   [ Updated dpkg-dev translations ]
   * French (Frédéric Bothamy). Closes: #423392
