Document in deb-control.5 that the control file can have '#'-style comments. Closes: #406481

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,9 @@
 2007-05-15  Guillem Jover  <guillem@debian.org>
 
+	* deb-control.5: Document comments in the control file.
+
+2007-05-15  Guillem Jover  <guillem@debian.org>
+
 	* install-info.8: Disambiguate the use of 'Info directory' with 'Info
 	dir file'.
 
