--- a/man/deb-control.5
+++ b/man/deb-control.5
@@ -1,6 +1,6 @@
 .\" Author: Raul Miller
 .\" Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
-.TH deb\-control 5 "2006-02-28" "Debian Project" "Debian"
+.TH deb\-control 5 "2007-05-15" "Debian Project" "Debian"
 .SH NAME
 deb\-control \- Debian packages' master control file format
 .
@@ -9,7 +9,8 @@ control
 .
 .SH DESCRIPTION
 Each Debian package contains the master `control' file, which contains
-a number of fields. Each field begins with a tag, such as
+a number of fields, or comments when the line starts with \fB'#'\fP. Each
+field begins with a tag, such as
 .B Package
 or
 .B Version
@@ -179,6 +180,7 @@ fields.
 .SH EXAMPLE
 .\" .RS
 .nf
+# Comment
 Package: grep
 Essential: yes
 Priority: required
