--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ dpkg (1.14.3) UNRELEASED; urgency=low
     file. Add missing commas. Thanks to Kurt B. Kaiser. Closes: #397737
   * Disambiguate in install-info.8 the use of 'Info directory' with
     'Info dir file'. Closes: #420766
+  * Document in deb-control.5 that the control file can have '#'-style
+    comments. Closes: #406481
 
   [ Updated dpkg-dev translations ]
   * French (Frédéric Bothamy). Closes: #423392
