Make start-stop-daemon fork twice while daemonizing. Closes: #416179

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ dpkg (1.14.3) UNRELEASED; urgency=low
     'Info dir file'. Closes: #420766
   * Document in deb-control.5 that the control file can have '#'-style
     comments. Closes: #406481
+  * Make start-stop-daemon fork twice while daemonizing. Closes: #416179
 
   [ Updated dpkg-dev translations ]
   * French (Frédéric Bothamy). Closes: #423392
