--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-05-15  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c (main): Move daemonizing code to ...
+	(daemonize): ... here. New function. Fork twice.
+
+2007-05-15  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl: Call fill_missing_slavepaths at the
 	end of the 'install' conditional.
 	(fill_missing_slavepaths): New function.
