* scripts/dpkg-divert.pl (checkmanymodes): Change the error message to 	say 'commands' instead of 'modes'. 	* scripts/dpkg-statoverride.pl (CheckModeConflict): Likewise. Use 	gettext for the string.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-05-15  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-divert.pl (checkmanymodes): Change the error message to
+	say 'commands' instead of 'modes'.
+	* scripts/dpkg-statoverride.pl (CheckModeConflict): Likewise. Use
+	gettext for the string.
+
+2007-05-15  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c (daemonize): Use _exit instead of exit, to
 	avoid side effects while the parents terminate.
 
