--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-05-15  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.3.
+
+2007-05-15  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-divert.pl (checkmanymodes): Change the error message to
 	say 'commands' instead of 'modes'.
 	* scripts/dpkg-statoverride.pl (CheckModeConflict): Likewise. Use
