--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.3) UNRELEASED; urgency=low
+dpkg (1.14.3) unstable; urgency=low
 
   [ Guillem Jover ]
   * Fix perl warnings:
@@ -10,8 +10,8 @@ dpkg (1.14.3) UNRELEASED; urgency=low
     deb-shlibs.5 in dpkg-dev.
   * Fix deb-substvars.5 section to match reality.
   * Refactor update-alternatives.
-  * Fix dpkg-divert to work again w/o specifying the --divert and --package
-    options. Closes: #423864
+  * Fix dpkg-divert to work again w/o specifying the '--divert' and
+    '--package' or '--local' options. Closes: #423864
   * Document in install-info.8 that when no '--section' option is specified,
     install-info will try to use the INFO-DIR-SECTION entry from the info
     file. Add missing commas. Thanks to Kurt B. Kaiser. Closes: #397737
@@ -19,7 +19,7 @@ dpkg (1.14.3) UNRELEASED; urgency=low
     'Info dir file'. Closes: #420766
   * Document in deb-control.5 that the control file can have '#'-style
     comments. Closes: #406481
-  * Make start-stop-daemon fork twice while daemonizing. Closes: #416179
+  * Make start-stop-daemon fork twice while daemonizing.
 
   [ Updated dpkg-dev translations ]
   * French (Frédéric Bothamy). Closes: #423392
@@ -31,7 +31,7 @@ dpkg (1.14.3) UNRELEASED; urgency=low
   [ Updated dselect translations ]
   * German (Sven Joachim). Closes: #423403
 
- -- Christian Perrier <bubulle@debian.org>  Fri, 11 May 2007 19:29:27 +0200
+ -- Guillem Jover <guillem@debian.org>  Tue, 15 May 2007 16:02:59 +0300
 
 dpkg (1.14.2) unstable; urgency=low
 
