--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.4) UNRELEASED; urgency=low
+
+  * 
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 15 May 2007 16:35:25 +0300
+
 dpkg (1.14.3) unstable; urgency=low
 
   [ Guillem Jover ]
