--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-17  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* po/fr.po: Updated to 1254t26f2u.
+
 2007-05-15  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
