Remove an unused variable in dpkg-statoverride by renaming it to the initially indented name. Closes: #425041

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-05-21  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-statoverride.pl ($pat): Rename to ...
+	($pattern): ... this. Fixes $pattern being an unused variable.
+	($file): Move the declaration to its first usage in the for loop.
+
 2007-05-15  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.4~.
