--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.14.4) UNRELEASED; urgency=low
 
-  * 
+  [ Guillem Jover ]
+  * Remove an unused variable in dpkg-statoverride by renaming it to the
+    initially indented name. Closes: #425041
 
  -- Guillem Jover <guillem@debian.org>  Tue, 15 May 2007 16:35:25 +0300
 
