--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,10 @@ dpkg (1.14.4) UNRELEASED; urgency=low
   * Remove an unused variable in dpkg-statoverride by renaming it to the
     initially intended name. Closes: #425041
 
- -- Guillem Jover <guillem@debian.org>  Tue, 15 May 2007 16:35:25 +0300
+  [ Updated dpkg translations ]
+  * French (Frédéric Bothamy).
+
+  -- Guillem Jover <guillem@debian.org>  Tue, 15 May 2007 16:35:25 +0300
 
 dpkg (1.14.3) unstable; urgency=low
 
