--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-21  Frédéric Bothamy  <frederic.bothamy@free.fr>
+
+	* fr.po: Updated to 921t.
+
 2007-05-15  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
