Fix perl warnings: - When unpacking a source package with -sp from a different directory   than the one containing the tarball. Closes: #424998

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-05-23  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-source.pl ($copy_required): New variable.
+	($dumptardev, $dumptarino): Move declaration inside the block issues
+	the stat call, and only compare them against $dsctardev and $dsctarino
+	if the stat succeeded.
+
 2007-05-21  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-statoverride.pl ($pat): Rename to ...
