--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 dpkg (1.14.4) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
+  * Fix perl warnings:
+    - When unpacking a source package with -sp from a different directory
+      than the one containing the tarball. Closes: #424998
   * Remove an unused variable in dpkg-statoverride by renaming it to the
     initially intended name. Closes: #425041
 
