--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dpkg (1.14.4) UNRELEASED; urgency=low
       than the one containing the tarball. Closes: #424998
   * Remove an unused variable in dpkg-statoverride by renaming it to the
     initially intended name. Closes: #425041
+  * Fix loose regex in dpkg-source (/\.debian.tar/ -> /\.debian\.tar/).
+    Thanks to Kylan Robinson. Closes: #425629
 
   [ Updated dpkg translations ]
   * French (Frédéric Bothamy).
