Revert change on 1.14.0 from Aaron M. Ucko. Trim down duped entries only when passing them to dpkg-query instead. Closes: #425641

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-05-23  Guillem Jover  <guillem@debian.org>
+
+	Revert commit on 2007-04-28 by Aaron M. Ucko  <ucko@debian.org>.
+
+	* scripts/dpkg-shlibdeps.pl: Trim down duplicated files from @libfiles
+	only when passing it to dpkg-query.
+
 2007-05-23  Kylan Robinson  <Kylan_Robinson@selinc.com>
 
 	* scripts/dpkg-source.pl: Fix regex (/\.debian.tar/ ->
