--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ dpkg (1.14.4) UNRELEASED; urgency=low
     initially intended name. Closes: #425041
   * Fix loose regex in dpkg-source (/\.debian.tar/ -> /\.debian\.tar/).
     Thanks to Kylan Robinson. Closes: #425629
+  * Revert change on 1.14.0 from Aaron M. Ucko. Trim down duped entries only
+    when passing them to dpkg-query instead. Closes: #425641
 
   [ Updated dpkg translations ]
   * French (Frédéric Bothamy).
