Updated basque translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ dpkg (1.14.4) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * French (Frédéric Bothamy).
+  * Basque (Piarres Beobide). Closes: #425776
 
  -- Guillem Jover <guillem@debian.org>  Tue, 15 May 2007 16:35:25 +0300
 
